<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etRegUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:paddingLeft="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etRegStudId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/reg_stud_id"
        android:paddingLeft="10dp" />

    <Spinner
        android:id="@+id/regSpinnerAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginBottom="30dp"
        android:entries="@array/reg_spinner_items"
        android:prompt="@string/reg_spinner_prompt" />

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/etRegPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/reg_password_again"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/btn_reg" />

</LinearLayout>