<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/etLoginUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingLeft="10dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/hint_user_name"
        android:inputType="text"
       />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/btn_log_in" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/btn_sign_up" />

</LinearLayout>